Scripts que ayudan al funcionamiento individual

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,13 @@ Datos/00_GC_data/
 Datos/01_Cleaned_data/
 
 Datos/02_lemma_data/
+
+Datos/05_words_simmil/
+
+Datos/04_words_data_s/
+
+Datos/03_en_only/
+
+Datos/00_other/
+
+Resultados/
